# stock-scraper

./: .gitignore  README.md  cookie.json  export.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml  tests.yml
src/: __init__.py  types.py
src/databases/: __init__.py  csvdb.py  jsondb.py  listing_cache.py  postgresdb.py  sqlitedb.py
src/listings/: __init__.py  nyse.py  slick_charts.py
src/runners/: __init__.py  multi_thread.py  single_thread.py  thread.py  threading.py  utils.py
src/scrapers/: __init__.py  main.py  proxy.py  stock_analysis_api.py  yahooapi.py
src/utils/: cookie_getter.py  proxy.py  validator.py
tests/: __init__.py  datastructures.py  helpers.py  test_yahooapi.py
