[tool.poetry]
name = "sample"
version = "0.1.0"
description = ""
authors = ["hemanta212 <sharmahemanta.212@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
psycopg2 = "^2.9.6"
lxml = "^4.9.2"


[tool.poetry.group.dev.dependencies]
ptpython = "^3.0.23"
rich = "^13.4.1"
black = "^23.3.0"
loguru = "^0.7.0"
rope = "^1.8.0"
pylint = "^2.17.4"
pylsp-mypy = "^0.6.7"
pyls-isort = "^0.2.2"
pylsp-rope = "^0.1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
